# trailer-brain

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: bts7090.rs  drawbuffer_example.rs  imu.rs  main.rs  main_example.rs  pico_slint.rs  renogy.rs  spi.rs  xpt2046.rs
src/spi/: dcs.rs
src/spi/dcs/: macros.rs  set_address_mode.rs  set_column_address.rs  set_invert_mode.rs  set_page_address.rs  set_pixel_format.rs  set_scroll_area.rs  set_scroll_start.rs  set_tearing_effect.rs
ui/: appwindow.slint
