[package]
name = "trailer-brain"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# rust-version = "1.68"  # Because of the allocator

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
slint = { version = "1.0.0", default-features = false, features = [
    "compat-1-0",
    "unsafe-single-threaded",
    "libm",
] }

# for the rp-pico, replace by the hal for your crate
panic-halt = { version = "0.2.0" }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rp-pico = { version = "0.8" }
cortex-m = { version = "0.7.6" }
cortex-m-rt = { version = "0.7.1" }
embedded-alloc = { version = "0.5" }
embedded-dma = { version = "0.2.0" }
euclid = { version = "0.22", default-features = false }
mipidsi = { version = "0.7.1" }
shared-bus = { version = "0.3.0", features=["cortex-m"]}
display-interface = { version = "0.4.1" }
embedded-graphics-core = { version = "0.4.0" }
embedded-hal = { version = "0.2.7" }
fugit = { version = "0.3.6" }
crossbeam-queue = { version = "0.3", default-features = false }
defmt = { version = "0.3" }
defmt-rtt = { version = "0.4" }

[build-dependencies]
slint-build = { version = "1.0.0" }
