[package]
name = "trailer-brain"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"  # Because of the allocator

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
panic-halt = { version = "0.2.0" }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rp-pico = { version = "0.8" }
rp2040-hal = { version = "0.9.2", features = ["defmt"] }
cortex-m = { version = "0.7.6" }
cortex-m-rt = { version = "0.7.1" }
shared-bus = { version = "0.3.0", features=["cortex-m"]}
display-interface = { version = "0.4.1" }
embedded-graphics-core = { version = "0.4.0" }
embedded-hal = { version = "0.2.7" }
fugit = { version = "0.3.6" }
defmt = { version = "0.3" }
defmt-rtt = { version = "0.4" }
heapless = { version = "0.7.16"}
pcf857x = "0.4.0"
lis2dh12 = { version = "0.6.9" }
micromath = "2.1.0"
rmodbus = { version = "0.7.6", default-features = false, features = ["heapless"] }
ssd1306 = "0.8.4"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
mpu6050 = "0.1.6"
